<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_go_to_playing"
        android:orderInCategory="1"

        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/now_playing"/>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_setting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/action_sort_AZ"/>
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/action_sortZA"/>
            <item
                android:id="@+id/menu_sort_by_total_videos"
                android:title="@string/action_sort_total_videos"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_sleepTimer"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/sleep_timer"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_musicPlayer"

        android:title="Music Player"
        app:showAsAction="never"/>
</menu>
