<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/iv_icond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A3000000"

        />
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_icon"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/marck_script"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/app_color"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/ll_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_check"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="Click 'Start' if you agree "
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15sdp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/app_color"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_2sdp"
                android:layout_below="@+id/tv_privacy"
                android:background="@color/app_color" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/drawable_rounded_dark"
        android:onClick="StartPriv"
        android:text="@string/start"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_20sdp" />
</RelativeLayout>
