<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EFEF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.customme.fullhdvideo.MainActivityGlory"
    tools:showIn="@layout/app_bar_main_glory">

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />


    <ScrollView

        android:id="@+id/sc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/main_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/all_video"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_baseline_video_library_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_Videoes"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/all_video_folder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_baseline_folder_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true"
                        android:text="@string/all_foldervideo"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_view3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/ll_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_history_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/history"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_baseline_favorite_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true"
                        android:text="@string/favorite_videos"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_view2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/all_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_baseline_library_music_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/all_audio"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/all_audio_folder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_baseline_folder_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_gravity="center_horizontal"
                            android:singleLine="true"
                            android:text="@string/all_folder_audio"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
